<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_white">

    <TextView
        android:id="@+id/tv_titlec"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/med_title"
        android:textColor="@color/colorPrimaryDarkRed"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_monday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/mon"
        android:textColor="@color/colorPrimaryDarkRed"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titlec" />

    <Spinner
        android:id="@+id/sp_med_monday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif-thin"
        android:spinnerMode="dropdown"
        android:textSize="14sp"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="@+id/sp_med_tuesday"
        app:layout_constraintStart_toStartOf="@+id/sp_med_tuesday"
        app:layout_constraintTop_toTopOf="@+id/tv_monday" />

    <CheckBox
        android:id="@+id/cb_nomed_monday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:buttonTint="@color/background_softgrey"
        android:checked="false"
        android:text="@string/no_med"
        android:textColor="@color/grey_90"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titlec"
        app:layout_constraintTop_toTopOf="@+id/sp_med_monday" />

    <TextView
        android:id="@+id/tv_tuesday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/tuesday"
        android:textColor="@color/colorPrimaryDarkRed"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_monday" />

    <Spinner
        android:id="@+id/sp_med_tuesday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif-thin"
        android:textSize="14sp"
        android:spinnerMode="dropdown"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="@+id/sp_med_wednes"
        app:layout_constraintStart_toStartOf="@+id/sp_med_wednes"
        app:layout_constraintTop_toTopOf="@+id/tv_tuesday" />


    <CheckBox
        android:id="@+id/cb_nomed_tuesday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:buttonTint="@color/background_softgrey"
        android:checked="false"
        android:text="@string/no_med"
        android:textColor="@color/grey_90"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sp_med_tuesday" />

    <TextView
        android:id="@+id/tv_wend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/wend"
        android:textColor="@color/colorPrimaryDarkRed"
        android:textSize="14sp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tuesday" />

    <Spinner
        android:id="@+id/sp_med_wednes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif-thin"
        android:textSize="14sp"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toStartOf="@+id/cb_nomed_wend"
        app:layout_constraintStart_toEndOf="@+id/tv_wend"
        app:layout_constraintTop_toTopOf="@+id/tv_wend" />

    <CheckBox
        android:id="@+id/cb_nomed_wend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:buttonTint="@color/background_softgrey"
        android:checked="false"
        android:text="@string/no_med"
        android:textColor="@color/grey_90"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sp_med_wednes" />

    <TextView
        android:id="@+id/tv_thrusday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/thursday"
        android:textColor="@color/colorPrimaryDarkRed"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_wend" />

    <Spinner
        android:id="@+id/sp_med_thrus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif-thin"
        android:textSize="14sp"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="@+id/sp_med_wednes"
        app:layout_constraintStart_toStartOf="@+id/sp_med_wednes"
        app:layout_constraintTop_toTopOf="@+id/tv_thrusday" />

    <CheckBox
        android:id="@+id/cb_nomed_thrusday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:buttonTint="@color/background_softgrey"
        android:checked="false"
        android:text="@string/no_med"
        android:textColor="@color/grey_90"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sp_med_thrus" />

    <TextView
        android:id="@+id/tv_friday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/friday"
        android:textColor="@color/colorPrimaryDarkRed"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_thrusday" />

    <Spinner
        android:id="@+id/sp_med_friday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif-thin"
        android:textSize="14sp"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="@+id/sp_med_thrus"
        app:layout_constraintStart_toStartOf="@+id/sp_med_thrus"
        app:layout_constraintTop_toTopOf="@+id/tv_friday" />

    <CheckBox
        android:id="@+id/cb_nomed_friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:buttonTint="@color/background_softgrey"
        android:checked="false"
        android:text="@string/no_med"
        android:textColor="@color/grey_90"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sp_med_friday" />

    <TextView
        android:id="@+id/tv_sat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/sat"
        android:textColor="@color/colorPrimaryDarkRed"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_friday" />

    <Spinner
        android:id="@+id/sp_med_sat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif-thin"
        android:textSize="14sp"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="@+id/sp_med_friday"
        app:layout_constraintStart_toStartOf="@+id/sp_med_friday"
        app:layout_constraintTop_toTopOf="@+id/tv_sat" />

    <CheckBox
        android:id="@+id/cb_nomed_sat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:buttonTint="@color/background_softgrey"
        android:checked="false"
        android:text="@string/no_med"
        android:textColor="@color/grey_90"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sp_med_sat" />

    <TextView
        android:id="@+id/tv_sun"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/sun"
        android:textColor="@color/colorPrimaryDarkRed"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sat" />

    <Spinner
        android:id="@+id/sp_med_sun"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif-thin"
        android:textAlignment="viewEnd"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/sp_med_sat"
        app:layout_constraintStart_toStartOf="@+id/sp_med_sat"
        app:layout_constraintTop_toTopOf="@+id/tv_sun" />

    <CheckBox
        android:id="@+id/cb_nomed_sun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:buttonTint="@color/background_softgrey"
        android:checked="false"
        android:text="@string/no_med"
        android:textColor="@color/grey_90"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sp_med_sun" />


    <Button
        android:id="@+id/btn_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_rounded_primary"
        android:fontFamily="sans-serif-medium"
        android:text="@string/save_medication"
        android:textSize="14sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sun" />

</androidx.constraintlayout.widget.ConstraintLayout>